src/test/deca/context/valid/addition_int.deca
//Test simple sur des additions d'entiers
//----------
//Résultat:
// 1 + 1 = 2
// 1 + -2 = -1
//----------
//Historique:
//Créé le 13.01.2022

{
int x = 1+1;
//int y = 1 + (-2);
println (" 1 + 1 = ", x);
//println (" 1 + -2 = ", y);
}